// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <button
        class="euiLink euiBreadcrumb__content css-5583ul-euiLink-subdued-euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs is rendered with final item as link 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        aria-current="page"
        class="euiLink euiBreadcrumb__content css-1gp94bu-euiLink-text-euiBreadcrumb__content"
        href="#"
        rel="noreferrer"
      >
        test
      </a>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Chordates
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-10erlav-euiBreadcrumb__content-isTruncated"
      >
        Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
      </span>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="false"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Tetrapods
      </span>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <button
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-5583ul-euiLink-subdued-euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Chordates
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-10erlav-euiBreadcrumb__content-isTruncated"
      >
        Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
      </span>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="false"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Tetrapods
      </span>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <button
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-5583ul-euiLink-subdued-euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <button
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-5583ul-euiLink-subdued-euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb css-1czveci-euiBreadcrumb-isTruncated"
    >
      <button
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-5583ul-euiLink-subdued-euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-1czveci-euiBreadcrumb-isTruncated"
    >
      <a
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <ol
    class="euiBreadcrumbs__list css-1ifj11g-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-1czveci-euiBreadcrumb-isTruncated"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list css-m0knzs-euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb css-13ulymg-euiBreadcrumb"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass css-tsivwr-euiLink-primary-euiBreadcrumb__content"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb css-13ulymg-euiBreadcrumb"
    >
      <span
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--collapsed css-1oihlqz-euiBreadcrumb-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content css-7rgcqt-euiLink-subdued"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb css-13ulymg-euiBreadcrumb"
    >
      <button
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-5583ul-euiLink-subdued-euiBreadcrumb__content"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--truncate css-13ulymg-euiBreadcrumb"
    >
      <a
        aria-current="false"
        class="euiLink euiBreadcrumb__content css-19mqlui-euiLink-subdued-euiBreadcrumb__content-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb euiBreadcrumb--last css-13ulymg-euiBreadcrumb"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content css-1qfgrzo-euiBreadcrumb__content"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;
